--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
                         <span class="social-icon">📱</span>
                         <span>GitHub</span>
                     </a>
-                    <a href="https://linkedin.com" class="social-item" target="_blank">
+                    <a href="www.linkedin.com/in/julio-cesar-reynaga-espiridion-0a2929233" class="social-item" target="_blank">
                         <span class="social-icon">💼</span>
                         <span>LinkedIn</span>
                     </a>
@@ -678,9 +678,9 @@
                         <span class="social-icon">🎵</span>
                         <span>TikTok</span>
                     </a>
-                    <a href="mailto:contacto@ayukode.com" class="social-item">
+                    <a href="mailto:reynagajc@outlook.com" class="social-item">
                         <span class="social-icon">📧</span>
-                        <span>contacto@ayukode.com</span>
+                        <span>reynagajc@outlook.com</span>
                     </a>
                 </div>
             </div>
