--- a/index.html
+++ b/index.html
@@ -603,46 +603,102 @@
         </div>
     </section>
 
-    <!-- Portfolio Section -->
-    <section id="portafolio" class="portfolio">
-        <div class="container">
-            <h2 class="section-title">Portafolio</h2>
-            <div class="portfolio-grid">
-                <div class="project-card">
-                    <div class="project-image">📱</div>
-                    <div class="project-content">
-                        <h3>Sistema de Gestión CRM</h3>
-                        <p>Aplicación web completa para gestión de clientes con automatización de procesos de ventas y análisis de rendimiento.</p>
-                        <a href="#" class="project-link">Ver en GitHub</a>
+<section id="portafolio" class="portfolio">
+    <div class="container">
+        <h2 class="section-title">Portafolio</h2>
+
+        <h3 class="portfolio-subtitle" style="font-size: 2rem; color: #c9d1d9; margin-top: 2rem; margin-bottom: 1.5rem; border-left: 4px solid #00ff99; padding-left: 1rem;">
+            Desarrollo de Software y Soluciones Empresariales
+        </h3>
+        <p style="color: #8b949e; text-align: center; max-width: 800px; margin: 0 auto 2rem auto;">
+            Sistemas a medida diseñados para optimizar la operación, reducir costos y potenciar la toma de decisiones en entornos corporativos.
+        </p>
+
+        <div class="portfolio-grid">
+
+            <div class="project-card">
+                <div class="project-image">🏭</div>
+                <div class="project-content">
+                    <h3>Sistema de Gestión de Producción (ERP)</h3>
+                    <p>Solución .NET y SQL Server para el control total de la manufactura: órdenes de producción, seguimiento en piso, gestión de BOMs, cálculo de costos y KPIs en tiempo real.</p>
+                    <div style="display: flex; gap: 0.5rem; flex-wrap: wrap;">
+                        <a href="[ENLACE-A-TU-VIDEO-DEMO]" target="_blank" class="project-link">🎥 Ver Video Demo</a>
+                        <a href="#contacto" class="project-link">Solicitar Acceso</a>
                     </div>
                 </div>
-                <div class="project-card">
-                    <div class="project-image">🤖</div>
-                    <div class="project-content">
-                        <h3>Bot de Automatización</h3>
-                        <p>Sistema automatizado para procesamiento de datos y reportes, reduciendo tiempo de trabajo manual en un 80%.</p>
-                        <a href="#" class="project-link">Ver en GitHub</a>
+            </div>
+
+            <div class="project-card">
+                <div class="project-image">🏢</div>
+                <div class="project-content">
+                    <h3>Intranet Corporativa Multiempresa</h3>
+                    <p>Portal en .NET Blazor que unifica la gestión, capacitación (Universidad NS) y comunicación. Con diseño dinámico y acceso por roles para cada empresa del grupo.</p>
+                     <div style="display: flex; gap: 0.5rem; flex-wrap: wrap;">
+                        <a href="[ENLACE-A-TU-APP-EN-AZURE]" target="_blank" class="project-link">🚀 Probar Demo en Vivo</a>
+                        <a href="[ENLACE-A-TU-VIDEO-DEMO]" target="_blank" class="project-link">🎥 Ver Video</a>
                     </div>
                 </div>
-                <div class="project-card">
-                    <div class="project-image">📈</div>
-                    <div class="project-content">
-                        <h3>Dashboard de Analytics</h3>
-                        <p>Panel de control interactivo para visualización de métricas empresariales con actualización en tiempo real.</p>
-                        <a href="#" class="project-link">Ver en GitHub</a>
+            </div>
+
+            <div class="project-card">
+                <div class="project-image">💰</div>
+                <div class="project-content">
+                    <h3>Sistema de Cálculo de Comisiones</h3>
+                    <p>Aplicación web desarrollada en Python y Django para automatizar el cálculo de comisiones de ventas, aplicando reglas de negocio complejas y generando reportes precisos.</p>
+                    <div style="display: flex; gap: 0.5rem; flex-wrap: wrap;">
+                         <a href="[ENLACE-A-TU-APP-EN-AZURE]" target="_blank" class="project-link">🚀 Probar Demo en Vivo</a>
+                         <a href="[ENLACE-A-TU-VIDEO-DEMO]" target="_blank" class="project-link">🎥 Ver Video</a>
                     </div>
                 </div>
-                <div class="project-card">
-                    <div class="project-image">🔗</div>
-                    <div class="project-content">
-                        <h3>API de Integración</h3>
-                        <p>API RESTful para integración de sistemas empresariales con documentación completa y endpoints optimizados.</p>
-                        <a href="#" class="project-link">Ver en GitHub</a>
+            </div>
+            
+            <div class="project-card">
+                <div class="project-image">⚡️</div>
+                <div class="project-content">
+                    <h3>App de Seguimiento de Producción</h3>
+                    <p>Solución ágil en Microsoft Power Apps para el seguimiento de la producción en planta. Permite a los operarios registrar avances y paros desde tablets, integrando los datos en tiempo real.</p>
+                    <div style="display: flex; gap: 0.5rem; flex-wrap: wrap;">
+                        <a href="[ENLACE-A-TU-VIDEO-DEMO]" target="_blank" class="project-link">🎥 Ver Video Demo</a>
+                        <a href="#contacto" class="project-link">Más Información</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <h3 class="portfolio-subtitle" style="font-size: 2rem; color: #c9d1d9; margin-top: 4rem; margin-bottom: 1.5rem; border-left: 4px solid #00ff99; padding-left: 1rem;">
+            Ciencia de Datos
+        </h3>
+         <p style="color: #8b949e; text-align: center; max-width: 800px; margin: 0 auto 2rem auto;">
+            Proyectos de análisis, visualización y modelado de datos para extraer insights valiosos y respaldar la toma de decisiones estratégicas.
+        </p>
+        
+        <div class="portfolio-grid">
+            <div class="project-card">
+                <div class="project-image">📊</div>
+                <div class="project-content">
+                    <h3>Dashboard de Análisis de Ventas</h3>
+                    <p>Panel interactivo para analizar KPIs de ventas. Creado con Streamlit y Plotly, permite filtrar por región, producto y período para descubrir tendencias clave.</p>
+                    <div style="display: flex; gap: 0.5rem; flex-wrap: wrap;">
+                        <a href="[ENLACE-A-GITHUB]" target="_blank" class="project-link">Ver en GitHub</a>
+                        <a href="[ENLACE-A-DEMO]" target="_blank" class="project-link">Ver Demo</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <div class="project-image">🐍</div>
+                <div class="project-content">
+                    <h3>Modelo Predictivo de Demanda</h3>
+                    <p>Script en Python con Pandas y Scikit-learn para predecir la demanda de productos, ayudando a optimizar los niveles de inventario y la planificación de la producción.</p>
+                    <div style="display: flex; gap: 0.5rem; flex-wrap: wrap;">
+                         <a href="[ENLACE-A-GITHUB]" target="_blank" class="project-link">Ver en GitHub</a>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Contact Section -->
     <section id="contacto" class="contact">
